--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,15 +13,15 @@ phases:
     commands:
       ## ECRにログイン
       - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 720170942685.dkr.ecr.us-west-2.amazonaws.com
+      - aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com
       ## Dockerイメージのタグとして使用するため、Gitのコミットハッシュを取得
       - IMAGE_TAG=$(echo ${CODEBUILD_RESOLVED_SOURCE_VERSION} | head -c 7)
 
   build:
     commands:
       ## Dockerイメージのビルド
-      - docker build -t fukai-test-dev-test-app-ecr-repo:$IMAGE_TAG .
-      ##
-      - docker tag fukai-test-dev-test-app-ecr-repo:$IMAGE_TAG 720170942685.dkr.ecr.us-west-2.amazonaws.com/fukai-test-dev-test-app-ecr-repo:$IMAGE_TAG
+      - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
+      ## イメージのタグ付け
+      - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       ## DockerイメージのECRへのプッシュ
-      - docker push 720170942685.dkr.ecr.us-west-2.amazonaws.com/fukai-test-dev-test-app-ecr-repo:$IMAGE_TAG
+      - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
