--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,13 +20,15 @@ phases:
   build:
     commands:
       ## Dockerイメージのビルド
+      - echo Build started on `date`
+      - echo Building the Docker image...
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
       ## イメージのタグ付け
       - docker tag $IMAGE_REPO_NAME:$IMAGE_TAG $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       ## DockerイメージのECRへのプッシュ
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - printf '{"Version":"1.0","ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
 
 artifacts:
     files:
-        - taskdef.json
-        - appspec.yaml
+        - imageDetail.json
