--- a/buildspec.yml
+++ b/buildspec.yml
@@ -32,8 +32,10 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image....
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - printf '{"Version":"1.0","ImageURI":"%s"}' $REPOSITORY_URI:$IMAGE_TAG > imageDetail.json
 
 artifacts:
   files:
     - taskdef.json
     - appspec.yaml
+    - imageDetail.json
