--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,12 +55,14 @@ jobs:
         id: task-def
         env:
           IMAGE: ${{ steps.build-image.outputs.image }}
-          BATCH_JOB_DEFINITION_TEMPLATE: aws/batch/job-definition-template.json
-          BATCH_JOB_DEFINITION: aws/batch/job-definition.json
+          BATCH_JOB_DEFINITION_TEMPLATE: job-definition-template.json
+          BATCH_JOB_DEFINITION: job-definition.json
         run: |
           sed -e "s#__image__#$IMAGE#" $BATCH_JOB_DEFINITION_TEMPLATE > $BATCH_JOB_DEFINITION
+        working-directory: ./aws/batch
 
       - name: Deploy AWS Batch job definition
         id: deploy-job-def
         run: |
-          aws batch register-job-definition --cli-input-json file:///$BATCH_JOB_DEFINITION
+          aws batch register-job-definition --cli-input-json file://$BATCH_JOB_DEFINITION
+        working-directory: ./aws/batch
