--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,16 +55,16 @@ jobs:
         id: task-def
         env:
           IMAGE: ${{ steps.build-image.outputs.image }}
-          BATCH_JOB_DEFINITION_TEMPLATE: job-definition-template.json
+          BATCH_JOB_DEFINITION_TEMPLATE: ./aws/batch/job-definition-template.json
           BATCH_JOB_DEFINITION: job-definition.json
         run: |
-          working-directory: ./aws/batch
+#          working-directory: ./aws/batch
           sed -e "s#__image__#$IMAGE#" $BATCH_JOB_DEFINITION_TEMPLATE > $BATCH_JOB_DEFINITION
 
       - name: Deploy AWS Batch job definition
         id: deploy-job-def
         run: |
-          working-directory: ./aws/batch
+#          working-directory: ./aws/batch
           aws batch register-job-definition --cli-input-json file://$BATCH_JOB_DEFINITION
 #        run: |
 #          aws batch register-job-definition --cli-input-json file://job-definition.json
