--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,5 +59,7 @@ jobs:
           BATCH_JOB_DEFINITION: job-definition.json
         working-directory: ./aws/batch
         run: |
+          pwd
           sed -e "s#__image__#$IMAGE#" $BATCH_JOB_DEFINITION_TEMPLATE > $BATCH_JOB_DEFINITION
           aws batch register-job-definition --cli-input-json file://$BATCH_JOB_DEFINITION
+          cat $BATCH_JOB_DEFINITION
